get started and chatInput animated using framer-motion.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.101",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "framer-motion": "^11.2.13",
     "ollama": "^0.5.2",
     "react": "^18.3.1",
     "react-contenteditable": "^3.3.7",
