--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ollama": "^0.5.2",
     "react": "^18.3.1",
     "react-contenteditable": "^3.3.7",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-scripts": "5.0.1",
